--- a/App/src/pages/dungeon/dungeon.html
+++ b/App/src/pages/dungeon/dungeon.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Dungeongame</title>
-    <link rel="stylesheet" href="../../resources/styles/common.css">
+    <link rel="stylesheet" href="../../resources/styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
             padding: 60px 0;  /* Pour éviter que le contenu soit caché sous header/footer */
@@ -40,6 +41,6 @@
         <p>&copy; 2024 DungeonGame - Tous droits réservés</p>
     </footer>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./dungeon.js"></script>
 </body>
 </html>
